tests/ui/resolve/visibility-order-dependent.stderr
error[E0742]: visibilities can only be restricted to ancestor modules
  --> $DIR/visibility-order-dependent.rs:5:12
   |
LL |     pub(in crate::bar) struct Foo;
   |            ^^^^^^^^^^

error[E0742]: visibilities can only be restricted to ancestor modules
  --> $DIR/visibility-order-dependent.rs:10:12
   |
LL |     pub(in crate::foo) struct Bar;
   |            ^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0742`.
